--- a/2020-12-29-dissecting-python.org
+++ b/2020-12-29-dissecting-python.org
@@ -604,14 +604,14 @@ tags: [book, template]
 
 ** For boring reader
 
-   The task isn't so tough it might seem, the most rules are naturally
-   entangled. There are a handful of /primal/ ones. The rest are
-   /derivatives/ based on the primal.
+   The task isn't so tough it might seem because the most rules are
+   naturally entangled. There are only a /thriple/ primals: =True=,
+   =False= and =None=. The rest are /derivatives/ based on the them.
+
+   Of course 
 
    Undoubtedly it simplifies the lesson. All what you need is to build
-   the knowledge tree-like structure in your mind. There are only a
-   /thriple/ primals: =True=, =False= and =None=. All other are
-   derivatives based on them.
+   the knowledge tree-like structure in your mind.
    
    For density this is a bottom paragraph with no data. The tap in a
    barrel.
